--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -24,7 +24,7 @@
         transition: .8s;
         cursor: pointer;
         position: absolute;
-        left: 77px;
+        left: 65px;
         transform: translateY(1px);
         width: auto;
         height: auto;
@@ -42,18 +42,21 @@
         width: auto;
         height: auto;
         position: absolute;
-        left: 18px;
+        left: 15px;
         z-index: 1000;
-        display: flex;
+        text-align: center;
         span{
+            height: 3px;
+            width: 24px;
+            background: #183b56;
+            border: 2px solid #183b56;
+            border-radius: 3px;
             display: block;
-            width: 7px;
-            height: 7px;
             transition: .2s;
-            background: rgb(50, 50, 50);
-            border-radius: 100%;
-            margin: 3px;
-            transform: translateX(-9px);
+            margin: 4px;
+            transform: translateX(-9px) rotate(0deg);
+            text-align: center;
+            transform-origin: center center;  
         }
         .upper-span{
         }
@@ -63,14 +66,14 @@
         }
         &.click{
             .upper-span{
-                margin-top: 15px;
+                transform: rotate(45deg) translateY(11.3px);
             }
             .center-span{
-                width: 8px;
-                height: 8px;
+                opacity: 0;
+                width: 0px;
             }
             .lower-span{
-                margin-top: 15px;
+                transform: rotate(-45deg) translateY(-11px);
             }
         }
     }
@@ -117,7 +120,7 @@
                     text-decoration: none;
                     width: 100%;
                     font-weight: 800;
-                    font-size: 0.875rem;
+                    font-size: 14.5px;
                     margin: 18px 0;
                     transform: translateX(25px);
                     cursor: pointer;
@@ -148,7 +151,7 @@
                         .nav-link-parent{
                             width: 100%;
                             height: 100%;
-                            background: #f3f9fd;
+                            background: #f1f9ff9a;
                         }
                         a{
                             transform: translateX(45px);
@@ -161,7 +164,7 @@
                         &.click{
                             color: #4287f5;
                             i{
-                                transform: rotateX(180deg) translateX(-50px) translateY(-7px);
+                                transform: rotateX(180deg) translateX(-50px) translateY(-11px);
                                 transform-origin: center center;                            
                             }
                         }
@@ -177,7 +180,7 @@
                         .nav-link-parent{
                             width: 100%;
                             height: 100%;
-                            background: #f3f9fd;
+                            background: #f1f9ff9a;
                         }
                         a{
                             transform: translateX(45px);
@@ -190,7 +193,7 @@
                         &.click{
                             color: #4287f5;
                             i{
-                                transform: rotateX(180deg) translateX(-50px) translateY(-7px);
+                                transform: rotateX(180deg) translateX(-50px) translateY(-11px);
                                 transform-origin: center center;                            
                             }
                         }
@@ -206,7 +209,7 @@
                         .nav-link-parent{
                             width: 100%;
                             height: 100%;
-                            background: #f3f9fd;
+                            background: #f1f9ff9a;
                         }
                         a{
                             transform: translateX(45px);
@@ -219,7 +222,7 @@
                         &.click{
                             color: #4287f5;
                             i{
-                                transform: rotateX(180deg) translateX(-50px) translateY(-7px);
+                                transform: rotateX(180deg) translateX(-50px) translateY(-11px);
                                 transform-origin: center center;                            
                             }
                         }
@@ -235,7 +238,7 @@
                         .nav-link-parent{
                             width: 100%;
                             height: 100%;
-                            background: #f3f9fd;
+                            background: #f1f9ff9a;
                         }
                         a{
                             transform: translateX(45px);
@@ -248,7 +251,7 @@
                         &.click{
                             color: #4287f5;
                             i{
-                                transform: rotateX(180deg) translateX(-50px) translateY(-7px);
+                                transform: rotateX(180deg) translateX(-50px) translateY(-11px);
                                 transform-origin: center center;                            
                             }
                         }
