--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -12,9 +12,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
-
-
-
 <!-- LOADER -->
 <!-- <div class="load-wrapp" id="homeLoader">
    <div class="load-2">
@@ -24,146 +21,76 @@
    </div>
  </div> -->
 <!-- COVER -->
+
+
+
+<!-- COVER -->
 <div class="cover" id="cover">
-
+   <!-- ALL COVER CONENT -->
+   <div class="content">
+      <!-- ALL COVER TEXT -->
+      <div class="text">
+         <h1 class="cover-h1">Enkleste Måten å Starte En Nettbutikk</h1>
+         <p class="cover-p">Enten om du selger digitale produkter eller nettjenester, er Webiser den enkleste måten å komme i gang med en nettbutikk</p>
+      </div>
+      <!-- ALL COVER ACTIONS -->
+      <div class="cover-actions">
+         <a href="/bestill">Kom i Gang<i class="fad fa-arrow-alt-from-left"></i></a>
+         <br>
+         <a href="">Les Om Oss<i class="fad fa-arrow-alt-from-left"></i></a>
+      </div>
+      <!-- COVER BOTTOM IMAGE -->
+      <div class="cover-image-div">
+         <img class="cover-image" src="{% static '/images/covers/cover-image2.png' %}" alt="image main cover web design webiser">
+      </div>
+   </div>
 </div>
-
-
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 <!-- INTRO -->
 <div class="intro">
-   <!-- SQUARE FOR TOP AND BOTTOM -->
-   <div class="square"></div>
-   <!-- CONTENT FOR THE WHOLE SECTION -->
    <div class="content">
-      <!-- PHONE IMAGE -->
-      <img class="intro-img1" id="introImgPhone" src="{% static '/images/covers/phone-web.png' %}" alt="image phone web design iphone webiser">
-      <!-- TEXT -->
-      <h1 class="heading">Fordeler med å velge oss</h1>
-      <!-- BENEFITS -->
-      <div id="benefits">
-         <li>24/7 kundeservice, TIL OG MED etter bestillingen har blitt fullført</li>
-         <li>Vi bygger nettsider som konverterer</li>
-         <li>Laveste prisene i Norge</li>
-         <li>Mange muligheter for nettsider du kan velge</li>
-         <li>Skrevet i Python, lett å forstå</li>
-         <li>Få hjelp av andre kundere som har tidligere bestillt hos Webiser <a href="/webiser-forum">her</a></li>
-         <li>Du bestemmer alt ved designen, eller la våres designere lage den</li>
-         <li>Betailing skjer veldig enkelt via vipps</li>
-         <li>NO RISK, vi jobber sammen til nettsiden har blitt 100% bekreftet av deg</li>
+      <div class="card">
+         <h1>22 Millioner+</h1>
+         <p>Nettbutikker i 2021</p>
       </div>
-      <!-- TO BE DECIDED IF THE IMAGE WILL FIT THE DESIGN -->
-         <!-- IF IMAGE FITS DESIGN, INTRO PADDING BOTTOM: 280px, IF NOT 150px -->
-      <!-- <img class="intro-img2" src="{% static '/images/covers/cover-3.png' %}" alt="image team web design making web-design thinking vector"> -->
-   </div>
-</div>
-<!-- RESTAURANT AGENCY EXAMPLE -->
-<div class="restaurant-example">
-   <!-- TRAVEL AGEMCY IMAGE -->
-   <img src="{% static '/images/covers/restaurant-example.jpg' %}" alt="restaurant food norway kebab shop food love shop">
-   <!-- CONTENT -->
-   <div class="content">
-      <!-- TEXT -->
-      <div class="text">
-         <h1>Er du eier av en restaurant?</h1>
-         <p>Bli synlig på nettet, få inn flere kunder</p>
+      <div class="card">
+         <h1>300+</h1>
+         <p>Drevet Nettbutikker</p>
       </div>
-      <!-- ACTIONS -->
-      <div class="restaurant-example-actions">
-         <a href="/bestill">Kom i gang</a>
+      <div class="card">
+         <h1>2 år+</h1>
+         <p>Erfaring</p>
+      </div>
+      <div class="card">
+         <h1>24/7</h1>
+         <p>Kundeservice</p>
       </div>
    </div>
-   
 </div>
 
+
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 
 <!-- SITES -->
