--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -5,178 +5,52 @@ $loader: rgb(80, 104, 180);
 
 
 // // // STANDARD PHONE
-
-
 // INTRO
 .intro{
-  background: transparent;
+  background: white;
   width: 100%;
   height: auto;
-  padding-bottom: 50px;
-  position: relative;
-  &.active{
-    .intro-img1{
-      
-    }
-  }
-  // SQUARES
-  .square{
-    // SQUARE BOTTOM
-    &::after{
-      content: '';
-      display: block;
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      width: 200px;
-      height: 200px;
-      background: rgba(248, 80, 50, 1);
-      background:linear-gradient(to bottom right,rgba(255, 255, 255, 0) 50%,#829efc33 50%);
-    }
-    // SQUARE TOP
-    &::before{
-      content: '';
-      display: block;
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 300px;
-      height: 300px;
-      background: rgba(248, 80, 50, 1);
-      background:linear-gradient(to bottom right,#829efc1c 50%,rgba(255, 255, 255, 0) 50%);
-    }
-  }
+  margin-top: 55px;
   .content{
-    .intro-img1{
-      z-index: 90;
-      position: relative;
-      left: 50%;
-      transform: translateX(-50%) translateY(-65px);
-      transition: .8s;
-    }
-    // .intro-img2{
-    //   width: 280px;
-    //   height: auto;
-    //   position: absolute;
-    //   bottom: 20px;
-    //   right: 10px;
-    // }
-    h1{
-      &.heading{
-        padding-left: 8px;
-        margin-bottom: 15px;
-        margin-top: 20px;
-        width: 100%;
-        font-family: 'Lato', sans-serif;
-        color: black;
-        font-size: 24px;
-      }
-    }
-    #benefits{
-      &.active{
-        li{
-          opacity: 1;
-          transform: translateX(0);
-        }
-      }
-      li{
-        opacity: 0;
-        transform: translateX(90px);
-        padding-left: 8px;
-        font-size: 15px;
-        width: 95%;
-        font-family: 'Lato', sans-serif;
-        color: black;
-        margin: 9px 0;
-        list-style: none;
-        &::before{
-          content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
-          color: rgb(28, 211, 28); /* Change the color */
-          font-weight: bold; /* If you want it to be bold */
-          display: inline-block; /* Needed to add space between the bullet and the text */
-          width: 1em; /* Also needed for space (tweak if needed) */
-        }
-        &:nth-child(1){
-          transition: .6s;
-        }
-        &:nth-child(2){
-          transition: .8s;
-        }
-        &:nth-child(3){
-          transition: 1s;
-        }
-        &:nth-child(4){
-          transition: 1.2s;
-        }
-        &:nth-child(5){
-          transition: 1.4s;
-        }
-        &:nth-child(6){
-          transition: 1.6s;
-        }
-        &:nth-child(7){
-          transition: 1.8s;
-        }
-        &:nth-child(8){
-          transition: 2s;
-        }
-        &:nth-child(9){
-          transition: 2.2s;
-        }
-      }
-    }
-  }
-}
-// RESTAURANT EXMPLE
-.restaurant-example{
-  background: transparent;
-  width: 100%;
-  height: auto;
-  position: relative;
-  img{
-    object-fit: cover;
+    width: 90%;
     height: auto;
-    max-width: 900px;
-    filter: brightness(40%);
-    z-index: 10;  
-  }
-  .content{
-    text-align: center;
-    .text{
-      position: absolute;
-      top: 120px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    border-top: 4px solid #0088F9;
+    border-radius: 0.45rem;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    .card{
+      transform: translateY(25px);
+      border: none;
+      width: 50%;
+      height: auto;
+      padding: 10px;
+      text-align: center;
+      &:nth-child(3){
+        transform: translateY(46px);
+      }
+      &:nth-child(4){
+        transform: translateY(48px);
+      }
       h1{
-        color: rgb(240, 240, 240);
-        font-size: 34px;
-        font-family: 'Alata', sans-serif;
-        font-weight: bold;
-        text-shadow: 0.3px 0.3px 1px white;   
+        font-size: 24px;
+        color: #183B56;
+        font-weight: 800;
       }
       p{
-        color: rgb(240, 240, 240);
-        font-size: 18px;
-        font-family: 'Alata', sans-serif;
-        transform: translateY(20px);
-      }
-    }
-    .restaurant-example-actions{
-      position: absolute;
-      top: 320px;
-      left: 50%;
-      transform: translateX(-50%);
-      a{
-        padding: 10px;
-        background: transparent;
-        border-radius: 7px;
-        outline: none;
-        border: none;
-        color: white;
-        text-align: center;
-        background: rgb(28, 211, 28);
+        font-size: 16px;
+        color: #183B56;
+        opacity: 0.9;
       }
     }
   }
 }
+
 // SITES
 .sites{
   background: transparent;
