--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -15,6 +15,10 @@ body {
   background: red;
 }
 
+body.menu {
+  overflow: hidden;
+}
+
 .light-overlay {
   width: -webkit-max-content;
   width: -moz-max-content;
@@ -104,8 +108,131 @@ body {
 
 .cover {
   width: 100%;
-  height: 100vh;
-  background: #EAF1F7;
+  height: 130vh;
+  background: -webkit-gradient(linear, left bottom, right top, from(white), color-stop(white), color-stop(65%, #EDF3F8), color-stop(65%, #EDF3F8), to(white));
+  background: linear-gradient(to top right, white, white, #EDF3F8 65%, #EDF3F8 65%, white);
+}
+
+.cover .content {
+  width: 100%;
+  height: 130vh;
+  text-align: center;
+  -webkit-transform: translateY(115px);
+          transform: translateY(115px);
+  padding: 10px;
+}
+
+.cover .content .text .cover-h1 {
+  color: #183B56;
+  font-size: 48px;
+  font-weight: 800;
+}
+
+.cover .content .text .cover-p {
+  color: #183B56;
+  opacity: 0.7;
+  font-size: 16px;
+  -webkit-transform: translateY(25px);
+          transform: translateY(25px);
+}
+
+.cover .content .cover-actions {
+  width: 100%;
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
+}
+
+.cover .content .cover-actions a {
+  display: inline-block;
+  width: 215px;
+  border-radius: 4px;
+  padding: 17px 10px;
+  font-size: 19px;
+  color: white;
+  font-weight: 600;
+  margin: 2px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border: 2px solid transparent;
+  text-decoration: none;
+}
+
+.cover .content .cover-actions a i {
+  -webkit-transform: translateX(18px) translateY(2px);
+          transform: translateX(18px) translateY(2px);
+}
+
+.cover .content .cover-actions a:nth-child(1) {
+  background: #0b2e57;
+}
+
+.cover .content .cover-actions a:nth-child(1):hover {
+  background: white;
+  border: 2px solid #0b2e57;
+  color: #0b2e57;
+}
+
+.cover .content .cover-actions a:nth-child(1):focus {
+  background: white;
+  border: 2px solid #0b2e57;
+  color: #0b2e57;
+}
+
+.cover .content .cover-actions a:nth-child(1):active {
+  background: white;
+  border: 2px solid #0b2e57;
+  color: #0b2e57;
+}
+
+.cover .content .cover-actions a:nth-child(3) {
+  border: 2px solid #0b2e57;
+  color: #0b2e57;
+}
+
+.cover .content .cover-actions a:nth-child(3):hover {
+  background: #0b2e57;
+  color: white;
+}
+
+.cover .content .cover-actions a:nth-child(3):focus {
+  background: #0b2e57;
+  color: white;
+}
+
+.cover .content .cover-actions a:nth-child(3):active {
+  background: #0b2e57;
+  color: white;
+}
+
+.cover .content .cover-image-div {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  bottom: 115px;
+}
+
+.cover .content .cover-image-div img {
+  height: auto;
+  width: 120%;
+  opacity: 0.9;
 }
 
 .load-wrapp {
