--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -18,6 +18,9 @@ html, body {
 
 body{
   background: red;
+  &.menu{
+    overflow:hidden;
+  }
 }
 
 .light-overlay{
@@ -85,8 +88,99 @@ body{
 // COVER
 .cover{
   width: 100%;
-  height: 100vh;
-  background: #EAF1F7;
+  height: 130vh;
+  background: linear-gradient(to top right, white, white, #EDF3F8 65%, #EDF3F8 65%, white);
+  .content{
+    width: 100%;
+    height: 130vh;
+    text-align: center;
+    transform: translateY(115px);
+    padding: 10px;
+    .text{
+      .cover-h1{
+        color: #183B56;
+        font-size: 48px;
+        font-weight: 800;
+      }
+      .cover-p{
+        color: #183B56;
+        opacity: 0.7;
+        font-size: 16px;
+        transform: translateY(25px);
+      }
+    }
+    .cover-actions{
+      width: 100%;
+      transform: translateY(50px);
+      a{
+        display: inline-block;
+        width: 215px;
+        border-radius: 4px;
+        padding: 17px 10px;
+        font-size: 19px;
+        color: white;
+        font-weight: 600;
+        margin: 2px auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        transition: .4s;
+        border: 2px solid transparent;
+        text-decoration: none;
+        i{
+          transform: translateX(18px) translateY(2px);
+        }
+        &:nth-child(1){
+          background: rgb(11, 46, 87);
+          &:hover{
+            background: white;
+            border: 2px solid rgb(11, 46, 87);
+            color: rgb(11, 46, 87);  
+          }
+          &:focus{
+            background: white;
+            border: 2px solid rgb(11, 46, 87);
+            color: rgb(11, 46, 87);  
+          }
+          &:active{
+            background: white;
+            border: 2px solid rgb(11, 46, 87);
+            color: rgb(11, 46, 87);  
+          }
+        }
+        &:nth-child(3){
+          border: 2px solid rgb(11, 46, 87);
+          color: rgb(11, 46, 87);
+            &:hover{
+              background: rgb(11, 46, 87);
+              color: white;
+            }
+            &:focus{
+              background: rgb(11, 46, 87);
+              color: white;
+            }
+            &:active{
+              background: rgb(11, 46, 87);
+              color: white;
+            }
+        }
+      }
+    }
+    .cover-image-div{
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      bottom: 115px;
+      img{
+        height: auto;
+        width: 120%;
+        opacity: 0.9;
+    }
+  }
+  }
 }
 
 .load-wrapp {
