--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -17,13 +17,17 @@
           align-items: center;
   -webkit-transition: .2s ease-in-out;
   transition: .2s ease-in-out;
-  -webkit-box-shadow: 1px 0px 3px rgba(255, 255, 255, 0.329);
-          box-shadow: 1px 0px 3px rgba(255, 255, 255, 0.329);
+  -webkit-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.08);
+          box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.08);
   background: white;
 }
 
 #navbar.sticky {
-  background: #ffffffb9;
+  background: #fffffff6;
+}
+
+#navbar.menu {
+  background: white;
 }
 
 #navbar .logo {
@@ -320,14 +324,14 @@
 #navbar .sidebar.active {
   opacity: 1;
   pointer-events: visible;
-  -webkit-transition: .7s;
-  transition: .7s;
+  -webkit-transition: .3s;
+  transition: .3s;
 }
 
 #navbar .order {
   margin: 0;
   position: absolute;
-  right: 15px;
+  right: 16px;
   cursor: pointer;
   color: black;
   padding: 7px 2px;
@@ -341,6 +345,21 @@
   text-decoration: none;
   background: white;
   border: 2px solid black;
+}
+
+#navbar .order:hover {
+  -webkit-filter: brightness(85%);
+          filter: brightness(85%);
+}
+
+#navbar .order:focus {
+  -webkit-filter: brightness(85%);
+          filter: brightness(85%);
+}
+
+#navbar .order:active {
+  -webkit-filter: brightness(85%);
+          filter: brightness(85%);
 }
 
 @media only screen and (min-device-width: 1024px) {
@@ -382,7 +401,7 @@
   }
   #navbar .desktop-menu .desktop-menu-ul .desktop-menu-li a {
     display: inline-block;
-    color: white;
+    color: black;
     text-decoration: none;
     width: auto;
     font-size: 14px;
