--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -13,11 +13,15 @@
     display: flex;
     align-items: center;
     transition: .2s ease-in-out;
-    box-shadow: 1px 0px 3px rgba(255, 255, 255, 0.329);
+    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.08);
     background: white;
     // NAVBAR STICKY
     &.sticky{
-        background: #ffffffb9;
+        background: #fffffff6;
+    }
+    // NAVBAR MENU
+    &.menu{
+        background: white;
     }
     // LOGO CSS 
     .logo{
@@ -262,14 +266,14 @@
         &.active{
             opacity: 1;
             pointer-events: visible;
-            transition: .7s;
+            transition: .3s;
         }
     }    
     // ORDER CSS
     .order{
         margin: 0;
         position: absolute;
-        right: 15px;
+        right: 16px;
         cursor: pointer;
         color: black;
         padding: 7px 2px;
@@ -282,6 +286,15 @@
         text-decoration: none;
         background: white;
         border: 2px solid black;
+        &:hover{
+            filter: brightness(85%);
+        }
+        &:focus{
+            filter: brightness(85%);
+        }
+        &:active{
+            filter: brightness(85%);
+        }
       }
 }
 
@@ -339,7 +352,7 @@
                     list-style: none;
                     a{
                         display: inline-block;
-                        color: white;
+                        color: black;
                         text-decoration: none;
                         width: auto;
                         font-size: 14px;
