--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -108,14 +108,14 @@ body.menu {
 
 .cover {
   width: 100%;
-  height: 130vh;
+  height: 133vh;
   background: -webkit-gradient(linear, left bottom, right top, from(white), color-stop(white), color-stop(65%, #EDF3F8), color-stop(65%, #EDF3F8), to(white));
   background: linear-gradient(to top right, white, white, #EDF3F8 65%, #EDF3F8 65%, white);
 }
 
 .cover .content {
   width: 100%;
-  height: 130vh;
+  height: 133vh;
   text-align: center;
   -webkit-transform: translateY(115px);
           transform: translateY(115px);
@@ -173,7 +173,7 @@ body.menu {
 }
 
 .cover .content .cover-actions a:nth-child(1) {
-  background: #0b2e57;
+  background: #031931;
 }
 
 .cover .content .cover-actions a:nth-child(1):hover {
@@ -231,8 +231,7 @@ body.menu {
 
 .cover .content .cover-image-div img {
   height: auto;
-  width: 120%;
-  opacity: 0.9;
+  width: 125%;
 }
 
 .load-wrapp {
