--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -135,12 +135,13 @@
   position: relative;
   width: 100%;
   text-align: left;
-  -webkit-transform: translateY(25px);
-          transform: translateY(25px);
+  -webkit-transform: translateY(35px);
+          transform: translateY(35px);
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li {
   list-style: none;
+  width: 100%;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li a {
@@ -148,12 +149,16 @@
   display: inline-block;
   text-decoration: none;
   width: 100%;
+  height: 100%;
   font-weight: 800;
-  font-size: 14.5px;
-  margin: 18px 0;
-  -webkit-transform: translateX(25px);
-          transform: translateX(25px);
+  font-size: 14.6px;
+  padding: 19px 0;
+  padding-left: 25px;
   cursor: pointer;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li a:active {
+  background: #d5edff9a;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li a::after {
@@ -162,8 +167,8 @@
   height: 1px;
   width: 100%;
   background: rgba(0, 0, 0, 0.17);
-  -webkit-transform: translateY(19px) translateX(-25px);
-          transform: translateY(19px) translateX(-25px);
+  -webkit-transform: translateY(19px) translateX(0);
+          transform: translateY(19px) translateX(0);
   position: absolute;
   left: 0;
 }
@@ -193,13 +198,12 @@
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .prices-dropdown .prices-dropdown-links a {
-  -webkit-transform: translateX(45px);
-          transform: translateX(45px);
+  padding-left: 45px;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .prices-dropdown .prices-dropdown-links a::after {
-  -webkit-transform: translateY(19px) translateX(-45px);
-          transform: translateY(19px) translateX(-45px);
+  -webkit-transform: translateY(19px) translateX(0);
+          transform: translateY(19px) translateX(0);
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .prices-dropdown #pricesToggle.click {
@@ -229,13 +233,12 @@
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .about-dropdown .about-dropdown-links a {
-  -webkit-transform: translateX(45px);
-          transform: translateX(45px);
+  padding-left: 45px;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .about-dropdown .about-dropdown-links a::after {
-  -webkit-transform: translateY(19px) translateX(-45px);
-          transform: translateY(19px) translateX(-45px);
+  -webkit-transform: translateY(19px) translateX(0);
+          transform: translateY(19px) translateX(0);
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .about-dropdown #aboutToggle.click {
@@ -265,13 +268,12 @@
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .help-dropdown .help-dropdown-links a {
-  -webkit-transform: translateX(45px);
-          transform: translateX(45px);
+  padding-left: 45px;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .help-dropdown .help-dropdown-links a::after {
-  -webkit-transform: translateY(19px) translateX(-45px);
-          transform: translateY(19px) translateX(-45px);
+  -webkit-transform: translateY(19px) translateX(0);
+          transform: translateY(19px) translateX(0);
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .help-dropdown #helpToggle.click {
@@ -301,13 +303,12 @@
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .account-dropdown .account-dropdown-links a {
-  -webkit-transform: translateX(45px);
-          transform: translateX(45px);
+  padding-left: 45px;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .account-dropdown .account-dropdown-links a::after {
-  -webkit-transform: translateY(19px) translateX(-45px);
-          transform: translateY(19px) translateX(-45px);
+  -webkit-transform: translateY(19px) translateX(0);
+          transform: translateY(19px) translateX(0);
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li .account-dropdown #accountToggle.click {
