--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -115,26 +115,31 @@
             position: relative;
             width: 100%;
             text-align: left;
-            transform: translateY(25px);
+            transform: translateY(35px);
             .sidebar-li{
                 list-style: none;
+                width: 100%;
                 a{
                     color: #082133;
                     display: inline-block;
                     text-decoration: none;
                     width: 100%;
+                    height: 100%;
                     font-weight: 800;
-                    font-size: 14.5px;
-                    margin: 18px 0;
-                    transform: translateX(25px);
+                    font-size: 14.6px;
+                    padding: 19px 0;
+                    padding-left: 25px;
                     cursor: pointer;
+                    &:active{
+                        background: #d5edff9a;
+                    }
                     &::after{
                         content: '';
                         display: block;
                         height: 1px;
                         width: 100%;
                         background: rgba(0, 0, 0, 0.17);
-                        transform: translateY(19px) translateX(-25px);
+                        transform: translateY(19px) translateX(0);
                         position: absolute;
                         left: 0;
                     }
@@ -158,9 +163,9 @@
                             background: #f1f9ff9a;
                         }
                         a{
-                            transform: translateX(45px);
+                            padding-left: 45px;
                             &::after{
-                                transform: translateY(19px) translateX(-45px);
+                                transform: translateY(19px) translateX(0);
                             }
                         }
                     }
@@ -187,9 +192,9 @@
                             background: #f1f9ff9a;
                         }
                         a{
-                            transform: translateX(45px);
+                            padding-left: 45px;
                             &::after{
-                                transform: translateY(19px) translateX(-45px);
+                                transform: translateY(19px) translateX(0);
                             }
                         }
                     }
@@ -216,9 +221,9 @@
                             background: #f1f9ff9a;
                         }
                         a{
-                            transform: translateX(45px);
+                            padding-left: 45px;
                             &::after{
-                                transform: translateY(19px) translateX(-45px);
+                                transform: translateY(19px) translateX(0);
                             }
                         }
                     }
@@ -245,9 +250,9 @@
                             background: #f1f9ff9a;
                         }
                         a{
-                            transform: translateX(45px);
+                            padding-left: 45px;
                             &::after{
-                                transform: translateY(19px) translateX(-45px);
+                                transform: translateY(19px) translateX(0);
                             }
                         }
                     }
