--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -48,10 +48,10 @@
 <!-- INTRO -->
 <div class="intro">
    <div class="content">
-      <div class="card">
-         <h1>22 Millioner+</h1>
+      <!-- <div class="card">
+         <h1></h1>
          <p>Nettbutikker i 2021</p>
-      </div>
+      </div> -->
       <div class="card">
          <h1>50+</h1>
          <p>Drevet Nettbutikker</p>
@@ -66,8 +66,56 @@
       </div>
    </div>
 </div>
+<!-- WHY WEBISER -->
+<div class="why-webiser">
+   <!-- WHY WEBISER CONTENT -->
+   <div class="content">
+      <!-- WHY WEBISER TEXT -->
+      <div class="text">
+         <p class="why-webiser-headingp">Hvorfor Webiser?</p>
+         <h1>Over 24 Millioner Nettbutikker i 2022, Begynn å Selg Online Du Også</h1>
+         <!-- LONG TEXT -->
+         <p class="why-webiser-long-ptext">
+            Uansett produktet du selger trenger du en high-end nettside for å konvertere.
+            Det er ikke nok med en pen nettside, 
+            du trenger en enkel måte å få flere salg, maksimere konverteringer og drive bedriften din.
+            <br>
+            <span>Webiser gjør alt det her for deg</span>
+         </p>
+      </div>
+   </div>
+</div>
+<!-- INFO -->
+<div class="info">
+   <!-- INFO CONTENT -->
+   <div class="content">
+      <!-- INFO TEXT -->
+      <div class="text">
+         <h1>Selg (nesten) alt du kan tenke deg om...</h1>
+      </div>
+      <div class="card">
+         
+      </div>
+      <div class="card">
 
+      </div>
+      <div class="card">
 
+      </div>
+      <div class="card">
+
+      </div>
+      <div class="card">
+
+      </div>
+      <div class="card">
+
+      </div>
+      <div class="card">
+
+      </div>
+   </div>
+</div>
 
 
 <br>
@@ -193,27 +241,6 @@
 <br>
 <br>
 
-<!-- LANGUAGES -->
-<div class="languages">
-   <!-- HTML -->
-   <i class="fab fa-html5"></i>
-   <!-- PYTHON -->
-   <i class="fab fa-python"></i>
-   <!-- CSS -->
-   <i class="fab fa-css3-alt"></i>
-   <!-- JAVASCRIPT -->
-   <i class="fab fa-js-square"></i>
-</div>
-
-<!-- POSITIVE -->
-<!-- <div class="positive">
-   <div class="content">
-      <div class="content-2">
-         <h1>Hva venter du på?</h1>
-         <a href="/bestill">Kom i gang nå!</a>
-      </div>
-   </div>
-</div> -->
 <br>
 <br>
 <br>
