--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -73,7 +73,7 @@
       <!-- WHY WEBISER TEXT -->
       <div class="text">
          <p class="why-webiser-headingp">Hvorfor Webiser?</p>
-         <h1>Over 24 Millioner Nettbutikker i 2022, Begynn å Selg Online Du Også</h1>
+         <h1>Aldri Vært Enkelere å Selge Online</h1>
          <!-- LONG TEXT -->
          <p class="why-webiser-long-ptext">
             Uansett produktet du selger trenger du en high-end nettside for å konvertere.
@@ -93,30 +93,115 @@
       <div class="text">
          <h1>Selg (nesten) alt du kan tenke deg om...</h1>
       </div>
+      <!-- EBOOKS -->
       <div class="card">
-         
+         <div class="card-content">
+            <div class="icon">
+               <i class="fa-solid fa-book"></i>
+            </div>
+            <div class="card-text">
+               <h1>eBøker</h1>
+               <p>Se de digitale og fysiske bøkene dine fly fra hyllene som aldri før!</p>
+            </div>
+         </div>
       </div>
+      <!-- ONLINE COURSE -->
       <div class="card">
-
+         <div class="card-content">
+            <div class="icon">
+               <i class="fa-solid fa-chalkboard-user"></i>
+            </div>
+            <div class="card-text">
+               <h1>Nettkurs</h1>
+               <p>Tiltrekk flere studenter med en enklere måte å kjøpe, oppgradere og få tilgang til innholdet ditt på</p>
+            </div>
+         </div>
       </div>
+      <!-- ECOMMERCE -->
       <div class="card">
-
+         <div class="card-content">
+            <div class="icon">
+               <i class="fa-solid fa-shop"></i>
+            </div>
+            <div class="card-text">
+               <h1>Nettbutikk</h1>
+               <p>Selg produkter på en enklere måte, og få inn flere salg</p>
+            </div>
+         </div>
       </div>
+      <!-- COACHING -->
       <div class="card">
-
+         <div class="card-content">
+            <div class="icon">
+               <i class="fa-solid fa-headset"></i>
+            </div>
+            <div class="card-text">
+               <h1>Coaching</h1>
+               <p>Alt du trenger for å bli #1 coach i din bransje</p>
+            </div>
+         </div>
       </div>
+      <!-- MEMBERSHIP SITES -->
       <div class="card">
-
+         <div class="card-content">
+            <div class="icon">
+               <i class="fa-solid fa-calendar-days"></i>
+            </div>
+            <div class="card-text">
+               <h1>Medlemskap nettside</h1>
+               <p>Lad gjentakende abonnementer, betalingsplaner og til og med "betal hva du vil"-priser</p>
+            </div>
+         </div>
       </div>
+      <!-- AND MUCH MORE -->
       <div class="card">
-
-      </div>
-      <div class="card">
-
+         <div class="card-content">
+            <div class="icon">
+               <i class="fa-solid fa-shuttle-space"></i>
+            </div>
+            <div class="card-text">
+               <h1>... og mye mer</h1>
+               <p>Selg nesten alle typer produkter du kan tenke deg.</p>
+            </div>
+         </div>
       </div>
    </div>
 </div>
-
+<!-- BENEFITS -->
+<div class="benefits">
+   <div class="content">
+      <div class="flex">
+         <div class="icon">
+            <i class="fa-solid fa-check"></i>
+         </div>
+         <p>100% responsiv</p>
+      </div>
+      <div class="flex">
+         <div class="icon">
+            <i class="fa-solid fa-check"></i>
+         </div>
+         <p>Enkelere måte å selge</p>
+      </div>
+      <div class="flex">
+         <div class="icon">
+            <i class="fa-solid fa-check"></i>
+         </div>
+         <p>Konverter salg</p>
+      </div>
+      <div class="flex">
+         <div class="icon">
+            <i class="fa-solid fa-check"></i>
+         </div>
+         <p>Bli synlig på nettet</p>
+      </div>
+      <div class="flex">
+         <div class="icon">
+            <i class="fa-solid fa-check"></i>
+         </div>
+         <p>Trygg bestilling</p>
+      </div>
+   </div>
+</div>
 
 <br>
 <br>
