--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -10,7 +10,7 @@ $loader: rgb(80, 104, 180);
   background: white;
   width: 100%;
   height: auto;
-  margin-top: 80px;
+  margin-top: 70px;
   padding: 17px;
   .content{
     width: 90%;
@@ -59,15 +59,16 @@ $loader: rgb(80, 104, 180);
   background: white;
   width: 100%;
   height: auto;
-  margin-top: 110px;
+  margin-top: 100px;
   padding: 17px;
+  position: relative;
   .content{
     .text{
       text-align: center;
       .why-webiser-headingp{
         color: #183B56;
         opacity: 0.7;
-        font-size: 16px;
+        font-size: 13px;
         font-weight: 800;
         letter-spacing: 1px;
         text-transform: uppercase;
@@ -77,7 +78,7 @@ $loader: rgb(80, 104, 180);
         color: #183B56;
         text-shadow: 1px 0 #183B56;
         letter-spacing:1px;    
-        font-size: 32px;
+        font-size: 26px;
         font-weight: 800;
       }
       .why-webiser-long-ptext{
@@ -89,7 +90,7 @@ $loader: rgb(80, 104, 180);
         font-size: 16px;
         span{
           position: relative;
-          top: 17px;
+          top: 20px;
           font-weight: bold;
           &::after{
             content: '';
@@ -97,9 +98,9 @@ $loader: rgb(80, 104, 180);
             position: relative;
             left: 50%;
             transform: translateX(-50%) translateY(10px);
-            width: 50%;
+            width: 70%;
             height: 3px;
-            background: #183B56;
+            background: #183b5665;
           }
         }
       }
@@ -126,17 +127,82 @@ $loader: rgb(80, 104, 180);
       }
     }
     .card{
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
       margin: 34px 0;
-      height: 150px;
-      width: 100%;
+      height: auto;
+      padding: 30px;
+      max-width: 400px;
       border-radius: 14px;
       border: none;
       border: 1px solid rgba(0, 0, 0, 0.065);
       box-shadow: 0 0 2px rgba(0, 0, 0, 0.094);
+      .card-content{
+        display: flex;
+        .icon{
+          width: 25%;
+          height: auto;
+          display: flex;
+          justify-content: center;
+          i{
+            color: #0088F9;
+            font-size: 42px;
+            transform: translateX(-15px);
+          }
+        }
+        .card-text{
+          width: 75%;
+          text-align: left;
+          transform: translateX(7px);
+          h1{
+            color: black;
+            font-size: 18px;
+            font-weight: 800;
+            text-shadow: 0.3px 0 black;
+            letter-spacing: 0.3px; 
+          }
+          p{
+            opacity: 0.9;
+            font-size: 15px;
+          }
+        }
+      }
     }
   }
 }
-
+// BENEFITS
+.benefits{
+  background: white;
+  width: 100%;
+  height: auto;
+  margin-top: 0px;
+  padding: 0px 25px;
+  .content{
+    text-align: left;
+    .flex{
+      width: 100%;
+      display: flex;
+      margin: 27px 0;
+      .icon{
+        border-radius: 50%;
+        padding: 3px 6px;
+        background: rgba(28, 211, 28, 0.2);
+        i{
+          color: rgba(28, 211, 28, 0.7);
+          font-size: 16px;
+        }
+      }
+      p{
+        font-size: 17px;
+        color: black;
+        margin: 0 15px;
+        opacity: 0.8;
+        transform: translateY(3px);
+      }
+    }
+  }
+}
 
 
 
